--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@auth/prisma-adapter": "^2.8.0",
     "@better-auth/stripe": "^1.2.4",
     "@hookform/resolvers": "^4.1.3",
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -64,15 +64,14 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "12.5.0",
     "front-matter": "^4.0.2",
     "geist": "^1.3.1",
     "lucide-react": "^0.483.0",
     "markdown-to-jsx": "^7.7.4",
     "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.6.3",
     "nanoid": "^5.1.5",
-    "next": "15.3.0-canary.9",
-    "next-auth": "5.0.0-beta.25",
+    "next": "15.3.1-canary.11",
     "next-mdx-remote-client": "^2.1.1",
     "next-safe-action": "^7.10.4",
     "next-themes": "^0.4.6",
@@ -129,6 +128,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "cross-fetch": "^4.1.0",
+    "dotenv": "^16.5.0",
     "eslint": "^9.22.0",
     "eslint-config-next": "15.2.3",
     "eslint-plugin-react": "^7.37.4",
@@ -138,7 +138,7 @@
     "knip": "^5.46.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "prisma": "^6.5.0",
+    "prisma": "^6.6.0",
     "tailwindcss": "^4.0.14",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0",
