--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postinstall": "prisma generate",
     "knip": "knip-bun --config knip.json",
     "lint": "eslint . --fix",
+    "prisma:seed": "NODE_ENV=development prisma db seed",
     "start": "next start",
     "stripe-webhooks": "stripe listen --forward-to localhost:3000/api/auth/stripe/webhook",
     "ts": "tsc --noEmit",
@@ -22,6 +23,9 @@
     "test:e2e:ci": "HEADLESS=TRUE playwright test",
     "lint:ci": "eslint .",
     "better-auth:migrate": "pnpm dlx @better-auth/cli generate --output prisma/schema/better-auth.prisma"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.2.6",
@@ -140,6 +144,7 @@
     "prettier": "^3.5.3",
     "prisma": "^6.6.0",
     "tailwindcss": "^4.0.14",
+    "tsx": "^4.19.3",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0",
     "unified": "^11.0.5",
