--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "tslog": "^4.9.3",
+    "up-fetch": "^2.1.2",
     "uploadthing": "^7.5.2",
     "use-debounce": "^10.0.4",
     "zod": "^3.24.2",
