--- a/package.json
+++ b/package.json
@@ -25,98 +25,97 @@
     "better-auth:migrate": "pnpm dlx @better-auth/cli generate --output prisma/schema/better-auth.prisma"
   },
   "prisma": {
-    "seed": "tsx prisma/seed.ts"
+    "seed": "pnpm tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.2.6",
-    "@auth/prisma-adapter": "^2.8.0",
-    "@better-auth/stripe": "^1.2.4",
+    "@ai-sdk/openai": "^1.3.21",
+    "@auth/prisma-adapter": "^2.9.0",
+    "@better-auth/stripe": "^1.2.7",
     "@hookform/resolvers": "^4.1.3",
-    "@prisma/client": "^6.6.0",
-    "@radix-ui/react-accordion": "^1.2.3",
-    "@radix-ui/react-alert-dialog": "^1.1.6",
-    "@radix-ui/react-aspect-ratio": "^1.1.2",
-    "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-collapsible": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@prisma/client": "^6.7.0",
+    "@radix-ui/react-accordion": "^1.2.8",
+    "@radix-ui/react-alert-dialog": "^1.1.11",
+    "@radix-ui/react-aspect-ratio": "^1.1.4",
+    "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-checkbox": "^1.2.3",
+    "@radix-ui/react-collapsible": "^1.1.8",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-progress": "^1.1.2",
-    "@radix-ui/react-radio-group": "^1.2.3",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-switch": "^1.1.3",
-    "@radix-ui/react-tabs": "^1.1.3",
-    "@radix-ui/react-toast": "^1.2.6",
-    "@radix-ui/react-toggle": "^1.1.2",
-    "@radix-ui/react-tooltip": "^1.1.8",
-    "@react-email/components": "0.0.34",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-popover": "^1.1.11",
+    "@radix-ui/react-progress": "^1.1.4",
+    "@radix-ui/react-radio-group": "^1.3.4",
+    "@radix-ui/react-select": "^2.2.2",
+    "@radix-ui/react-separator": "^1.1.4",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.9",
+    "@radix-ui/react-toast": "^1.2.11",
+    "@radix-ui/react-toggle": "^1.1.6",
+    "@radix-ui/react-tooltip": "^1.2.4",
+    "@react-email/components": "0.0.38",
     "@react-email/html": "0.0.11",
-    "@react-email/tailwind": "1.0.4",
+    "@react-email/tailwind": "1.0.5",
     "@shikijs/rehype": "^2.5.0",
     "@t3-oss/env-nextjs": "^0.12.0",
-    "@tailwindcss/postcss": "^4.0.14",
-    "@tanstack/react-query": "^5.69.0",
+    "@tailwindcss/postcss": "^4.1.5",
+    "@tanstack/react-query": "^5.75.1",
     "@uploadthing/react": "^7.3.0",
-    "ai": "^4.1.63",
-    "better-auth": "^1.2.4",
+    "ai": "^4.3.13",
+    "better-auth": "^1.2.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "front-matter": "^4.0.2",
-    "geist": "^1.3.1",
-    "lucide-react": "^0.483.0",
-    "markdown-to-jsx": "^7.7.4",
+    "lucide-react": "^0.507.0",
+    "markdown-to-jsx": "^7.7.6",
     "mini-svg-data-uri": "^1.4.4",
-    "motion": "^12.6.3",
+    "motion": "^12.9.4",
     "nanoid": "^5.1.5",
-    "next": "15.3.1-canary.11",
-    "next-mdx-remote-client": "^2.1.1",
-    "next-safe-action": "^7.10.4",
+    "next": "15.3.1",
+    "next-mdx-remote-client": "^2.1.2",
+    "next-safe-action": "^7.10.8",
     "next-themes": "^0.4.6",
-    "next-zod-route": "^0.2.4",
+    "next-zod-route": "^0.2.5",
     "nprogress": "^0.2.0",
-    "nuqs": "^2.4.1",
+    "nuqs": "^2.4.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-email": "3.0.7",
-    "react-hook-form": "^7.54.2",
-    "react-hotkeys-hook": "^4.6.1",
-    "react-markdown": "^9.1.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-email": "4.0.11",
+    "react-hook-form": "^7.56.2",
+    "react-hotkeys-hook": "^5.0.1",
+    "react-markdown": "^10.1.0",
     "react-use": "^17.6.0",
-    "recharts": "^2.15.1",
+    "recharts": "^2.15.3",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-prism-plus": "^2.0.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
-    "resend": "4.1.2",
-    "sass": "^1.86.0",
+    "resend": "4.5.0",
+    "sass": "^1.87.0",
     "shiki": "^2.5.0",
     "sonner": "^2.0.1",
     "stripe": "^17.7.0",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "tslog": "^4.9.3",
     "up-fetch": "^2.1.2",
     "uploadthing": "^7.5.2",
     "use-debounce": "^10.0.4",
-    "zod": "^3.24.2",
+    "zod": "^3.24.3",
     "zod-form-data": "^2.0.7",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.7",
+    "@eslint/compat": "^1.2.9",
     "@eslint/eslintrc": "^3.3.0",
-    "@eslint/js": "^9.22.0",
-    "@faker-js/faker": "^9.6.0",
-    "@next/eslint-plugin-next": "15.2.3",
-    "@playwright/test": "^1.51.1",
+    "@eslint/js": "^9.26.0",
+    "@faker-js/faker": "^9.7.0",
+    "@next/eslint-plugin-next": "15.3.1",
+    "@playwright/test": "^1.52.0",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -124,32 +123,33 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/canvas-confetti": "^1.9.0",
     "@types/cookies": "^0.9.0",
-    "@types/node": "^22.13.10",
+    "@types/node": "^22.15.3",
     "@types/nprogress": "^0.2.3",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "@typescript-eslint/eslint-plugin": "^8.27.0",
-    "@typescript-eslint/parser": "^8.27.0",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
+    "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "cross-fetch": "^4.1.0",
     "dotenv": "^16.5.0",
-    "eslint": "^9.22.0",
-    "eslint-config-next": "15.2.3",
+    "eslint": "^9.26.0",
+    "eslint-config-next": "15.3.1",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "5.2.0",
     "globals": "^16.0.0",
-    "jsdom": "^26.0.0",
-    "knip": "^5.46.0",
+    "jsdom": "^26.1.0",
+    "knip": "^5.53.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "prisma": "^6.6.0",
-    "tailwindcss": "^4.0.14",
-    "tsx": "^4.19.3",
+    "prisma": "^6.7.0",
+    "tailwindcss": "^4.1.5",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.27.0",
+    "typescript-eslint": "^8.31.1",
     "unified": "^11.0.5",
-    "vitest": "^3.0.9",
+    "vitest": "^3.1.2",
     "vitest-mock-extended": "^3.0.1"
   },
   "packageManager": "pnpm@9.15.1+sha512.1acb565e6193efbebda772702950469150cf12bcc764262e7587e71d19dc98a423dff9536e57ea44c49bdf790ff694e83c27be5faa23d67e0c033b583be4bfcf"
