--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tailwindcss/postcss": "^4.1.5",
     "@tanstack/react-query": "^5.75.1",
+    "@tanstack/react-query-devtools": "^5.75.5",
     "@uploadthing/react": "^7.3.0",
     "ai": "^4.3.13",
     "better-auth": "^1.2.7",
