--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -42,10 +42,18 @@ jobs:
 
       - name: Verify open PR for SHA
         run: |
-          PR_COUNT=$(curl -s -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" \
+          PR_RESPONSE=$(curl -s -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
-            "https://api.github.com/repos/${{ github.repository }}/commits/${{ env.sha }}/pulls" \
-            | jq '[.[] | select(.state == "open")] | length')
+            "https://api.github.com/repos/${{ github.repository }}/commits/${{ env.sha }}/pulls")
+          
+          # Check if response is a valid array
+          if ! echo "$PR_RESPONSE" | jq -e 'if type == "array" then true else false end' > /dev/null; then
+            echo "❌ Invalid API Response or authentication error:"
+            echo "$PR_RESPONSE"
+            exit 1
+          fi
+          
+          PR_COUNT=$(echo "$PR_RESPONSE" | jq '[.[] | select(.state == "open")] | length')
 
           if [ "$PR_COUNT" -lt 1 ]; then
             echo "❌ No open PRs found for this commit!"
