NOW.TS Claude Migration: Playwright CI/CD Overhaul & Test Improvements (#63)
* refactor dialog manager for ui.nowts.app

* Update Playwright workflow to run locally in CI

- Change from deployment_status trigger to pull_request/push
- Run tests against local server instead of deployed environment
- Add PostgreSQL service for database tests
- Update environment variables for local testing
- Remove Vercel-specific deployment logic

* Fix GitHub OAuth secret names

GitHub secrets cannot start with GITHUB_ prefix

* fix: wrap NotifyNowts API call in try-catch to prevent build failures

- Handle 404 errors from codelynx.dev API gracefully
- Add warning log for failed deployment notifications
- Ensure build continues even if notification fails

* fix: add DATABASE_URL_UNPOOLED to Playwright workflow

- Add missing DATABASE_URL_UNPOOLED environment variable
- Fixes Prisma schema validation error during CI build

* fix: use prisma migrate deploy for CI migrations

- Replace migrate dev with migrate deploy for CI environment
- Prevents migration conflicts in automated builds

* fix: resolve delete account test failure and add comprehensive logging

- Fix confirmation text case sensitivity (Delete vs delete)
- Add extensive console logging for better debugging in CI
- Enable proper console output in Playwright CI reporter
- Add step-by-step logging for delete, update name, and change password flows
- Improve test reliability with proper button state checking

* redeploy

* docs: update CHANGELOG for NOW.TS Claude Migration

- Document Playwright CI/CD improvements and migration from Vercel testing
- Add comprehensive list of test reliability enhancements
- Document build fixes and environment configuration improvements
- Prepare changelog for PR with detailed technical improvements

* remove prompts

* docs: add Claude commands and worktree scripts with documentation

- Add commit, create-pull-request, explore-plan-code-test, and fix-pr-comments commands
- Add setup-worktree.

--- a/.env-template
+++ b/.env-template
@@ -16,7 +16,7 @@ BETTER_AUTH_SECRET=
 ## * Resend
 RESEND_API_KEY=""
 RESEND_AUDIENCE_ID=""
-RESEND_EMAIL_FROM="contact@nowts.app" # ex: "NowTS <contact@nowts.app>"
+EMAIL_FROM="contact@nowts.app" # ex: "NowTS <contact@nowts.app>"
 NEXT_PUBLIC_EMAIL_CONTACT="contact@nowts.app"
 
 ## * STRIPE
