--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,84 +1,146 @@
 name: E2E Playwright Tests
-env:
-  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
 on:
-  deployment_status:
+  pull_request:
+    branches: [main]
+    paths:
+      - "src/**"
+      - "app/**"
+      - "prisma/**"
+      - "e2e/**"
+      - ".github/workflows/playwright.yml"
+  push:
+    branches: [main]
+    paths:
+      - "src/**"
+      - "app/**"
+      - "prisma/**"
+      - "e2e/**"
+
+# Cancel previous runs on the same PR/branch
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   test:
-    # Only run this job when a deployment to preview or production is successful
-    if: github.event.deployment_status.state == 'success' && (github.event.deployment_status.environment == 'Preview')
+    name: Playwright Tests
     timeout-minutes: 60
     runs-on: ubuntu-latest
+
+    # Common environment variables for all steps
+    env:
+      # Core
+      DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/nowts_test"
+      DATABASE_URL_UNPOOLED: "postgresql://postgres:postgres@localhost:5432/nowts_test"
+      BETTER_AUTH_SECRET: "test-secret-key-for-ci-testing-only-not-production"
+      BETTER_AUTH_URL: "http://localhost:3000"
+      NODE_ENV: "production"
+      # Email
+      RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
+      EMAIL_FROM: "NowTS <contact@nowts.app>"
+      NEXT_PUBLIC_EMAIL_CONTACT: "contact@nowts.app"
+      # Stripe
+      STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
+      NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY: ${{ secrets.NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY }}
+      STRIPE_WEBHOOK_SECRET: ${{ secrets.STRIPE_WEBHOOK_SECRET }}
+      STRIPE_PRO_PLAN_ID: ${{ secrets.STRIPE_PRO_PLAN_ID }}
+      STRIPE_PRO_YEARLY_PLAN_ID: ${{ secrets.STRIPE_PRO_YEARLY_PLAN_ID }}
+      STRIPE_ULTRA_PLAN_ID: ${{ secrets.STRIPE_ULTRA_PLAN_ID }}
+      STRIPE_ULTRA_YEARLY_PLAN_ID: ${{ secrets.STRIPE_ULTRA_YEARLY_PLAN_ID }}
+      # OAuth
+      GITHUB_CLIENT_ID: ${{ secrets.OAUTH_GITHUB_CLIENT_ID }}
+      GITHUB_CLIENT_SECRET: ${{ secrets.OAUTH_GITHUB_CLIENT_SECRET }}
+      GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+      GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+      # Analytics
+      NEXT_PUBLIC_POSTHOG_KEY: ${{ secrets.NEXT_PUBLIC_POSTHOG_KEY }}
+      NEXT_PUBLIC_POSTHOG_HOST: ${{ secrets.NEXT_PUBLIC_POSTHOG_HOST }}
+      # Playwright specific
+      PLAYWRIGHT_TEST_BASE_URL: "http://localhost:3000"
+      HEADLESS: "true"
+      CI: "true"
+      PORT: 3000
+
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: postgres
+          POSTGRES_DB: nowts_test
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
     steps:
-      - uses: pnpm/action-setup@v2
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
         with:
           version: 9
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: lts/*
+          cache: "pnpm"
 
-      - name: Install Vercel CLI
-        run: npm install --global vercel@latest
-
-      - name: Get SHA from Deployment API
-        run: |
-          DEPLOYMENT_URL="${{ github.event.deployment_status.deployment_url }}"
-          SHA=$(curl -s -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            "$DEPLOYMENT_URL" | jq -r '.sha')
-          echo "sha=$SHA" >> $GITHUB_ENV
-
-      - name: Get branch name from SHA
-        run: |
-          BRANCH_NAME=$(curl -s -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            "https://api.github.com/repos/${{ github.repository }}/branches" \
-            | jq -r --arg SHA "${{ env.sha }}" '.[] | select(.commit.sha == $SHA) | .name')
-          echo "branch=$BRANCH_NAME" >> $GITHUB_ENV
-
-      - name: Verify open PR for SHA
-        run: |
-          PR_RESPONSE=$(curl -s -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            "https://api.github.com/repos/${{ github.repository }}/commits/${{ env.sha }}/pulls")
-          
-          # Check if response is a valid array
-          if ! echo "$PR_RESPONSE" | jq -e 'if type == "array" then true else false end' > /dev/null; then
-            echo "❌ Invalid API Response or authentication error:"
-            echo "$PR_RESPONSE"
-            exit 1
-          fi
-          
-          PR_COUNT=$(echo "$PR_RESPONSE" | jq '[.[] | select(.state == "open")] | length')
-
-          if [ "$PR_COUNT" -lt 1 ]; then
-            echo "❌ No open PRs found for this commit!"
-            exit 1
-          fi
-
-      - name: Pull Vercel Environment Information
-        run: vercel env pull --environment=preview --git-branch=${{ env.branch }} .env --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Cache Next.js build
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.npm
+            ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
 
       - name: Install dependencies
-        run: pnpm i
+        run: pnpm install --prod=false
 
-      - name: Install Playwright Browsers
+      - name: Generate Prisma client
+        run: pnpm prisma generate
+
+      - name: Deploy database migrations
+        run: pnpm prisma migrate deploy
+        
+      - name: Verify database schema
+        run: pnpm prisma migrate status
+
+      - name: Build application
+        run: pnpm build
+
+      - name: Install Playwright browsers
         run: pnpm exec playwright install chromium --with-deps
 
-      - name: Run Playwright tests against deployed URL
-        env:
-          NODE_OPTIONS: "--max_old_space_size=4096"
-          PLAYWRIGHT_TEST_BASE_URL: ${{ github.event.deployment_status.environment_url }}
-          VERCEL_AUTOMATION_BYPASS_SECRET: ${{ secrets.VERCEL_AUTOMATION_BYPASS_SECRET }}
-        run: pnpm exec playwright test --project=chromium
+      - name: Start application
+        run: pnpm start &
 
-      - uses: actions/upload-artifact@v4
+      - name: Wait for application to be ready
+        run: pnpm dlx wait-on@latest http://localhost:3000 --timeout 60000
+
+      - name: Run Playwright tests
+        run: pnpm test:e2e:ci
+
+      - name: Upload Playwright report
+        uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
           name: playwright-report
           path: playwright-report/
+          retention-days: 30
+
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: test-results
+          path: test-results/
           retention-days: 30
