--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "seed": "pnpm tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.3.22",
-    "@auth/prisma-adapter": "^2.9.1",
-    "@better-auth/stripe": "^1.2.8",
+    "@ai-sdk/openai": "^1.3.23",
+    "@auth/prisma-adapter": "^2.10.0",
+    "@better-auth/stripe": "^1.3.3",
     "@hookform/resolvers": "^4.1.3",
-    "@prisma/client": "^6.9.0",
+    "@prisma/client": "^6.12.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -54,40 +54,39 @@
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@react-email/components": "0.0.41",
+    "@react-email/components": "0.3.2",
     "@react-email/html": "0.0.11",
-    "@react-email/render": "1.1.2",
-    "@react-email/tailwind": "1.0.5",
-    "@shikijs/rehype": "^2.5.0",
-    "@t3-oss/env-nextjs": "^0.13.6",
-    "@tailwindcss/postcss": "^4.1.8",
-    "@tanstack/react-query": "^5.80.6",
-    "@tanstack/react-query-devtools": "^5.80.6",
-    "@uploadthing/react": "^7.3.1",
-    "ai": "^4.3.16",
-    "better-auth": "^1.2.8",
+    "@react-email/render": "1.1.3",
+    "@react-email/tailwind": "1.2.2",
+    "@shikijs/rehype": "^3.8.1",
+    "@t3-oss/env-nextjs": "^0.13.8",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query-devtools": "^5.83.0",
+    "@uploadthing/react": "^7.3.2",
+    "ai": "^4.3.19",
+    "better-auth": "^1.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "front-matter": "^4.0.2",
-    "lucide-react": "^0.513.0",
-    "markdown-to-jsx": "^7.7.6",
+    "lucide-react": "^0.525.0",
+    "markdown-to-jsx": "^7.7.12",
     "mini-svg-data-uri": "^1.4.4",
-    "motion": "^12.16.0",
+    "motion": "^12.23.7",
     "nanoid": "^5.1.5",
-    "next": "15.3.3",
+    "next": "15.4.3",
     "next-mdx-remote-client": "^2.1.2",
-    "next-safe-action": "^8.0.2",
+    "next-safe-action": "^8.0.8",
     "next-themes": "^0.4.6",
     "next-zod-route": "^0.2.6",
     "nprogress": "^0.2.0",
     "nuqs": "^2.4.3",
-    "prettier-plugin-tailwindcss": "^0.6.12",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-email": "4.0.16",
-    "react-hook-form": "^7.57.0",
+    "react-email": "4.2.4",
+    "react-hook-form": "^7.61.0",
     "react-hotkeys-hook": "^5.1.0",
     "react-markdown": "^10.1.0",
     "react-use": "^17.6.0",
@@ -96,28 +95,27 @@
     "rehype-prism-plus": "^2.0.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
-    "resend": "4.5.2",
-    "sass": "^1.89.1",
-    "shiki": "^2.5.0",
-    "sonner": "^2.0.5",
-    "stripe": "^17.7.0",
-    "tailwind-merge": "^3.3.0",
+    "resend": "4.7.0",
+    "sass": "^1.89.2",
+    "shiki": "^3.8.1",
+    "sonner": "^2.0.6",
+    "stripe": "^18.3.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "tslog": "^4.9.3",
-    "up-fetch": "^2.1.6",
-    "uploadthing": "^7.7.2",
+    "up-fetch": "^2.1.8",
     "use-debounce": "^10.0.5",
     "zod": "^3.25.56",
     "zod-form-data": "^2.0.7",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.9",
+    "@eslint/compat": "^1.3.1",
     "@eslint/eslintrc": "^3.3.0",
-    "@eslint/js": "^9.28.0",
-    "@faker-js/faker": "^9.8.0",
-    "@next/eslint-plugin-next": "15.3.3",
-    "@playwright/test": "^1.52.0",
+    "@eslint/js": "^9.31.0",
+    "@faker-js/faker": "^9.9.0",
+    "@next/eslint-plugin-next": "15.4.3",
+    "@playwright/test": "^1.54.1",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -125,34 +123,35 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/canvas-confetti": "^1.9.0",
     "@types/cookies": "^0.9.1",
-    "@types/node": "^22.15.30",
+    "@types/node": "^24.1.0",
     "@types/nprogress": "^0.2.3",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "@typescript-eslint/eslint-plugin": "^8.33.1",
-    "@typescript-eslint/parser": "^8.33.1",
-    "@vitejs/plugin-react": "^4.5.1",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
     "cross-fetch": "^4.1.0",
-    "dotenv": "^16.5.0",
-    "eslint": "^9.28.0",
-    "eslint-config-next": "15.3.3",
+    "dotenv": "^17.2.0",
+    "eslint": "^9.31.0",
+    "eslint-config-next": "15.4.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "5.2.0",
-    "globals": "^16.2.0",
+    "globals": "^16.3.0",
     "jsdom": "^26.1.0",
-    "knip": "^5.60.2",
-    "postcss": "^8.5.4",
-    "prettier": "^3.5.3",
-    "prisma": "^6.9.0",
-    "tailwindcss": "^4.1.8",
+    "knip": "^5.62.0",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "prisma": "^6.12.0",
+    "tailwindcss": "^4.1.11",
     "ts-node": "^10.9.2",
-    "tsx": "^4.19.4",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.33.1",
+    "typescript-eslint": "^8.38.0",
     "unified": "^11.0.5",
-    "vitest": "^3.2.2",
+    "vitest": "^3.2.4",
     "vitest-mock-extended": "^3.0.1"
   },
-  "packageManager": "pnpm@9.15.1+sha512.1acb565e6193efbebda772702950469150cf12bcc764262e7587e71d19dc98a423dff9536e57ea44c49bdf790ff694e83c27be5faa23d67e0c033b583be4bfcf"
+  "packageManager": "pnpm@10.14.0"
 }
