--- a/package.json
+++ b/package.json
@@ -63,12 +63,13 @@
     "@tanstack/react-query-devtools": "^5.85.5",
     "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^5.0.21",
-    "better-auth": "^1.3.7",
+    "better-auth": "^1.3.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "front-matter": "^4.0.2",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.540.0",
     "markdown-to-jsx": "^7.7.13",
     "motion": "^12.23.12",
