--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "seed": "pnpm tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^2.0.25",
-    "@hookform/resolvers": "^5.2.1",
-    "@prisma/client": "^6.15.0",
+    "@ai-sdk/openai": "^2.0.32",
+    "@hookform/resolvers": "^5.2.2",
+    "@prisma/client": "^6.16.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -54,29 +54,29 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@react-email/components": "0.5.2",
-    "@react-email/render": "1.2.2",
+    "@react-email/components": "0.5.3",
+    "@react-email/render": "1.2.3",
     "@react-email/tailwind": "1.2.2",
-    "@shikijs/rehype": "^3.12.2",
+    "@shikijs/rehype": "^3.13.0",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tailwindcss/postcss": "^4.1.13",
-    "@tanstack/react-query": "^5.87.1",
-    "@tanstack/react-query-devtools": "^5.87.1",
+    "@tanstack/react-query": "^5.89.0",
+    "@tanstack/react-query-devtools": "^5.89.0",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "ai": "^5.0.35",
-    "better-auth": "^1.3.8",
+    "ai": "^5.0.48",
+    "better-auth": "^1.3.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "front-matter": "^4.0.2",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.542.0",
+    "lucide-react": "^0.544.0",
     "markdown-to-jsx": "^7.7.13",
-    "motion": "^12.23.12",
+    "motion": "^12.23.16",
     "nanoid": "^5.1.5",
     "next": "15.5.3",
-    "next-mdx-remote-client": "^2.1.3",
+    "next-mdx-remote-client": "^2.1.5",
     "next-safe-action": "^8.0.11",
     "next-themes": "^0.4.6",
     "next-zod-route": "^1.0.0",
@@ -84,61 +84,61 @@
     "nuqs": "^2.6.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "react-email": "4.2.8",
-    "react-hook-form": "^7.62.0",
+    "react-email": "4.2.11",
+    "react-hook-form": "^7.63.0",
     "react-hotkeys-hook": "^5.1.0",
     "react-use": "^17.6.0",
-    "recharts": "^3.1.2",
+    "recharts": "^3.2.1",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
-    "resend": "6.0.2",
-    "sass": "^1.92.1",
-    "shiki": "^3.12.2",
+    "resend": "6.1.0",
+    "sass": "^1.93.0",
+    "shiki": "^3.13.0",
     "sonner": "^2.0.7",
     "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "tslog": "^4.9.3",
     "up-fetch": "^2.4.0",
-    "zod": "^4.1.5",
+    "zod": "^4.1.11",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.2",
     "@eslint/eslintrc": "^3.3.0",
-    "@eslint/js": "^9.35.0",
+    "@eslint/js": "^9.36.0",
     "@faker-js/faker": "^10.0.0",
-    "@next/eslint-plugin-next": "^15.5.2",
+    "@next/eslint-plugin-next": "^15.5.3",
     "@playwright/test": "^1.55.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^24.3.1",
+    "@types/node": "^24.5.2",
     "@types/nprogress": "^0.2.3",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "@typescript-eslint/eslint-plugin": "^8.42.0",
-    "@typescript-eslint/parser": "^8.42.0",
-    "@vitejs/plugin-react": "^5.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.44.0",
+    "@typescript-eslint/parser": "^8.44.0",
+    "@vitejs/plugin-react": "^5.0.3",
     "cross-fetch": "^4.1.0",
     "dotenv": "^17.2.2",
-    "eslint": "^9.35.0",
+    "eslint": "^9.36.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "5.2.0",
-    "globals": "^16.3.0",
-    "jsdom": "^26.1.0",
+    "globals": "^16.4.0",
+    "happy-dom": "^19.0.2",
     "knip": "^5.63.1",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "prisma": "^6.15.0",
+    "prisma": "^6.16.2",
     "tailwindcss": "^4.1.13",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.42.0",
+    "typescript-eslint": "^8.44.0",
     "unified": "^11.0.5",
     "vitest": "^3.2.4",
     "vitest-mock-extended": "^3.0.1"
