chore: update vscode snippets and workflow config (#79)
* chore: update vscode snippets and workflow config

* fix: use global PageProps type in admin pages

* chore: remove cursor config and scripts

* fix: resolve CI failures in middleware and test imports

- Remove unnecessary null check in middleware that was always falsy
- Uncomment session validation in middleware-utils and use optional chaining
- Update test imports to use correct component name

* fix: suppress false-positive ESLint warnings for better-auth type guards

- Add eslint-disable comments for optional chaining on better-auth session checks
- These checks are necessary at runtime despite ESLint thinking they're redundant
- Fix unnecessary nullish coalescing in donuts chart viewBox

* chore: update better-auth dependency to version 1.3.27

- Upgrade better-auth from 1.3.13 to 1.3.27 in package.json and pnpm-lock.yaml
- Ensure compatibility with the latest features and fixes in better-auth

* add

* feat: add metadata enhancement command

* add

* add tanstack form

* fix pretteir

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -14,14 +14,24 @@ jobs:
         node-version: [22.x]
 
     steps:
+      - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v2
         with:
-          version: 8
-      - uses: actions/checkout@v3
+          version: 9
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+          cache: "pnpm"
+      - name: Cache Next.js build
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.npm
+            ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
       - name: Install
         run: pnpm install
         env:
@@ -37,14 +47,24 @@ jobs:
       matrix:
         node-version: [22.x]
     steps:
+      - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v2
         with:
-          version: 8
-      - uses: actions/checkout@v3
+          version: 9
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+          cache: "pnpm"
+      - name: Cache Next.js build
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.npm
+            ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
       - name: Install
         run: pnpm install
         env:
@@ -59,14 +79,24 @@ jobs:
       matrix:
         node-version: [22.x]
     steps:
+      - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v2
         with:
-          version: 8
-      - uses: actions/checkout@v3
+          version: 9
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+          cache: "pnpm"
+      - name: Cache Next.js build
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.npm
+            ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
       - name: Install
         run: pnpm install
         env:
