--- a/package.json
+++ b/package.json
@@ -60,11 +60,12 @@
     "@shikijs/rehype": "^3.13.0",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tailwindcss/postcss": "^4.1.13",
+    "@tanstack/react-form": "^1.23.7",
     "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-query-devtools": "^5.89.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^5.0.48",
-    "better-auth": "^1.3.13",
+    "better-auth": "^1.3.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -75,13 +76,14 @@
     "markdown-to-jsx": "^7.7.13",
     "motion": "^12.23.16",
     "nanoid": "^5.1.5",
-    "next": "15.5.3",
+    "next": "15.5.4",
     "next-mdx-remote-client": "^2.1.5",
     "next-safe-action": "^8.0.11",
     "next-themes": "^0.4.6",
     "next-zod-route": "^1.0.0",
     "nprogress": "^0.2.0",
     "nuqs": "^2.6.0",
+    "radix-ui": "^1.4.3",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-email": "4.2.11",
@@ -134,6 +136,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "prisma": "^6.16.2",
+    "shadcn": "^3.4.2",
     "tailwindcss": "^4.1.13",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
