--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "globals": "^16.5.0",
     "happy-dom": "^20.0.11",
     "knip": "^5.73.4",
+    "openai": "^6.15.0",
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
