fix: configure prisma schema path for multi-file schema in prisma/schema/

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prisma:generate": "pnpm prisma generate"
   },
   "prisma": {
+    "schema": "prisma/schema",
     "seed": "pnpm tsx prisma/seed.ts"
   },
   "dependencies": {
